--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -24,6 +24,9 @@ framework:
 twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
+    form:
+        resources:
+            - 'PMTWebBundle:Form:bootstrap.html.twig'
 
 # Assetic Configuration
 assetic:
