--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ services: mysql
 before_script:
   - mysql -e 'create database pmt;'
   - cp app/config/parameters.yml.dist app/config/parameters.yml
-  - composer install
+  - composer install -n --dev --prefer-source
 
 script: phpunit -c app
