--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -15,6 +15,10 @@ security:
             id: fos_user.user_provider.username
 
     firewalls:
+        dev:
+            pattern:  ^/(_(profiler|wdt)|css|images|js)/
+            security: false
+
         main:
             pattern:    /
             form_login:
