--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         "sensio/generator-bundle": "2.2.*",
         "jms/security-extra-bundle": "1.4.*",
         "jms/di-extra-bundle": "1.3.*",
-        "friendsofsymfony/user-bundle": "~2.0@dev",
-        "genemu/form-bundle": "2.1.*"
+        "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "scripts": {
         "post-install-cmd": [
