Google analytics tracking

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -27,6 +27,8 @@ twig:
     form:
         resources:
             - 'PMTWebBundle:Form:bootstrap.html.twig'
+    globals:
+        google_analytics_property_id: %google.analytics.property_id%
 
 # Assetic Configuration
 assetic:
