--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -13,3 +13,5 @@ parameters:
 
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    google.analytics.property_id: UA-42147996-1
