Add tests for AjaxController

--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -38,4 +38,8 @@
         </whitelist>
     </filter>
 
+    <php>
+        <env name="PMTWEB_AUTH_USER" value="admin"/>
+        <env name="PMTWEB_AUTH_PASSWORD" value="test"/>
+    </php>
 </phpunit>
