--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "jms/di-extra-bundle": "1.4.*",
         "friendsofsymfony/user-bundle": "~2.0@dev"
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.21"
+    },
     "scripts": {
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
