--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,11 @@
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
+
         "jms/security-extra-bundle": "1.5.*",
         "jms/di-extra-bundle": "1.4.*",
         "friendsofsymfony/user-bundle": "~2.0@dev",
+        "friendsofsymfony/comment-bundle": "2.0.*@dev",
         "ornicar/gravatar-bundle": "dev-master"
     },
     "require-dev": {
