Add comments to history logger

--- a/src/PMT/CoreBundle/Resources/config/services.yml
+++ b/src/PMT/CoreBundle/Resources/config/services.yml
@@ -16,3 +16,9 @@ services:
         factory_service: doctrine
         factory_method: getRepository
         arguments: ["PMT\\CoreBundle\\Entity\\Workflow\\WorkflowStep"]
+
+    kernel.listener.your_listener_name:
+        class: PMT\CoreBundle\EventListener\CommentListener
+        arguments: [@doctrine.orm.entity_manager]
+        tags:
+            - { name: kernel.event_listener, event: fos_comment.comment.post_persist, method: registerNewComment }
