Fix error handling unauthenticated

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,7 +34,7 @@ twig:
 # Assetic Configuration
 assetic:
     debug:          %kernel.debug%
-    use_controller: false
+    use_controller: true
     bundles: [ "PMTWebBundle", "FOSCommentBundle" ]
     #java: /usr/bin/java
     filters:
