Log auth requests

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -26,3 +26,8 @@ monolog:
             type:  stream
             path:  %kernel.logs_dir%/%kernel.environment%.log
             level: debug
+        login:
+            type:               stream
+            path:               "%kernel.logs_dir%/auth.log"
+            level:              info
+            channels:           security
